[package]
name = "eplot"
version = "0.1.0"
authors = ["Sven Niederberger <niederberger@embotech.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = { git = "https://github.com/emilk/egui", branch = "master" }

[lib]
name = "eplot"
path = "lib.rs"
